Add attachment pero sin errores
