# blacklotus/serializers.py
@@ -1,5 +1,5 @@
 from rest_framework import serializers
-from .models import Issue,Activity,Profile
+from .models import Issue,Activity,Profile, Attachments
 
 class IssueSerializer(serializers.ModelSerializer):
     class Meta:
@@ -10,6 +10,11 @@ class IssueSerializer(serializers.ModelSerializer):
 class IssuesSerializer(serializers.ModelSerializer):
     class Meta:
         model = Issue
+        fields = '__all__'
+
+class AttachmentsSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = Attachments
         fields = '__all__'
 
 
